# Copyright (c) OpenMMLab. All rights reserved.
cmake_minimum_required(VERSION 3.14)
project(javaapis)

include(${CMAKE_SOURCE_DIR}/cmake/MMDeploy.cmake)
include_directories(${CMAKE_SOURCE_DIR}/include/c)
include_directories(${CMAKE_SOURCE_DIR}/include/cpp/core)
include_directories(${CMAKE_SOURCE_DIR}/include/cpp/experimental)
find_package(OpenCV REQUIRED core imgproc)
find_package(ncnn REQUIRED)
find_package(spdlog REQUIRED)
message(STATUS "spdlog lib dir: ${spdlog_DIR}/../../")
link_directories(${spdlog_DIR}/../../)

if ("all" IN_LIST MMDEPLOY_CODEBASES)
    set(TASK_LIST "classifier;detector;segmentor;text_detector;text_recognizer;"
        "pose_detector;restorer;rotated_detector")
else ()
    if ("mmcls" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "classifier")
    endif ()
    if ("mmdet" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "detector")
    endif ()
    if ("mmseg" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "segmentor")
    endif ()
    if ("mmedit" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "restorer")
    endif ()
    if ("mmocr" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "text_detector")
        list(APPEND TASK_LIST "text_recognizer")
    endif ()
    if ("mmpose" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "pose_detector")
    endif ()
    if ("mmrotate" IN_LIST MMDEPLOY_CODEBASES)
        list(APPEND TASK_LIST "rotated_detector")
    endif()
endif ()
foreach (TASK ${TASK_LIST})
    set(TARGET_NAME mmdeploy_${TASK}_javaapis)
    mmdeploy_load_dynamic(mmdeploy_${TASK} MMDeployDynamicModules)
    add_library(${TARGET_NAME} SHARED ${TASK}.cpp)
    target_link_libraries(${TARGET_NAME} PRIVATE MMDeployLibs PUBLIC ncnn
        ${OpenCV_LIBS} spdlog)
endforeach()
